# SnakeGame

./: CMakeLists.txt  main.cpp
include/: board.hpp  food.hpp  game.hpp  snake.hpp
src/: board.cpp  food.cpp  game.cpp  snake.cpp
